# bin

./: .gitignore  README  acorn  alt_merge_repos2.py  alt_merge_repos2.sh  apple_os_installers.py  awesome-compiz  awsudo  bk  cfn-convert-2-list.py  clang-apply-replacements  clang-format  clang-tidy  clean-berks-cookbook  color-spaces.pl  combine-git-repos.sh  customize-remote-host.bash  datamatrix-join-file.sh  datamatrix-split-file.sh  dfm-bridge.sh  dtruss-new.sh  emacs-read-stdin.sh  emacs.sh  encode-zip  errno  fastmod  file_combiner.py  gdb-codesign.sh  git-create-branch  gitcreate.bash  github-org-cloner.py  glob  installinstallmacos.py  is-dns-slow  keep_alive  keymod.py  launch-emacs  launchsyslog  lintrunner.py  loadkext.sh  (+36 more)
.scripts/py/: linters.bash
docker-on-start/: com.user.boot2docker.plist  docker-osx  initialize_docker.sh  setup.sh
mcdsurvey/: pyproject.toml
mcdsurvey/mcdsurvey/: __init__.py
socks5-relay/: pyproject.toml
socks5-relay/socks_relay/: __init__.py
