[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdsurvey"
version = "0.1.0"
description = "submit survey to mcdonalds for free food"
dependencies = ["playwright", "llama-index", "llama-parse", "typing_extensions"]

[project.scripts]
mcdsurvey = "mcdsurvey:main"
